# spp

./: .clang-format  .cppcheck-suppressions  .gitignore  .pre-commit-config.yaml  .vale.ini  .yamllint.yaml  CMakeLists.txt  Doxyfile  LICENSE.md  LICENSE_COMMERCIAL.md  README.md  ROADMAP.md  main.cpp  pre-commit-config.yaml  profile.txt  pyproject.toml  sonar-project.properties
.github/: README.md  dependabot.yaml  versions.env
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  refactor.md
.github/actions/_configure_cmake/: action.yaml
.github/actions/_setup_toolchain/: action.yaml
.github/actions/checkout/: action.yaml  restore_mtimes.py
.github/actions/configure-cmake/: action.yaml
.github/actions/detect-changes/: action.yaml
.github/actions/restore-mtimes/: action.yaml
.github/actions/run-tests/: action.yaml
.github/actions/setup-toolchain/: action.yaml
.github/matchers/: cppcheck.json
.github/workflows/: _build_and_test.yaml  _compile.yaml  _cppcheck.yaml  _docs.yaml  _lint.yaml  _sanitizers.yaml  _security.yaml  _sonar.yaml  claude.yaml  claude_code_review.yaml  nightly.yaml  post_merge.yaml  pr.yaml  sonarcloud.yml  sonarcube.yaml
.github/workflows/configure_cmake/: action.yaml
.github/workflows/setup_toolchain/: action.yaml
_ideas/: annotations.md  codegen.md  const.md  const_funcs.md  constraints.md  deref.md  destructuring.md  enums.md  functions.md  generators.md  in_expr.md  lib_exe.md  meta.md  modules.md  numbers.md  reflection.md  stl.md
docs/: doxygen_filter.py  generate2.py
docs/source/: conf.py  index.rst
docs/source/_ext/: flatten_namespaces.py
docs/source/compiler-api/: index.rst  spp.analyse.errors.rst  spp.analyse.errors.semantic_error.rst  spp.analyse.errors.semantic_error_builder.rst  spp.analyse.rst  spp.analyse.scopes.rst  spp.analyse.scopes.scope.rst  spp.analyse.scopes.scope_block_name.rst  spp.analyse.scopes.scope_iterator.rst  spp.analyse.scopes.scope_manager.rst  spp.analyse.scopes.scope_range.rst  spp.analyse.scopes.symbol_table.rst  spp.analyse.scopes.symbols.rst  spp.analyse.utils.bin_utils.rst  spp.analyse.utils.func_utils.rst  spp.analyse.utils.mem_utils.rst  spp.analyse.utils.order_utils.rst  spp.analyse.utils.rst  spp.analyse.utils.type_utils.rst  spp.asts._fwd.rst  spp.asts.annotation_ast.rst  spp.asts.array_literal_ast.rst  spp.asts.array_literal_explicit_elements_ast.rst  spp.asts.array_literal_repeated_element_ast.rst  spp.asts.assignment_statement_ast.rst  spp.asts.ast.rst  spp.asts.binary_expression_ast.rst  spp.asts.binary_expression_temp_ast.rst  spp.asts.boolean_literal_ast.rst  spp.asts.case_expression_ast.rst  spp.asts.case_expression_branch_ast.rst  spp.asts.case_pattern_variant_ast.rst  spp.asts.case_pattern_variant_destructure_array_ast.rst  spp.asts.case_pattern_variant_destructure_attribute_binding_ast.rst  spp.asts.case_pattern_variant_destructure_object_ast.rst  spp.asts.case_pattern_variant_destructure_skip_multiple_arguments_ast.rst  spp.asts.case_pattern_variant_destructure_skip_single_argument_ast.rst  spp.asts.case_pattern_variant_destructure_tuple_ast.rst  spp.asts.case_pattern_variant_else_ast.rst  spp.asts.case_pattern_variant_else_case_ast.rst  (+177 more)
docs/source/spec-api/: index.rst
headers/spp/: cli.hpp  cli.ixx  cli2.ixx  macros.hpp  pch.hpp
headers/spp/abstract/: abstract_ast.ixx  abstract_sym.ixx  all.ixx
headers/spp/analyse/: macros.hpp
headers/spp/asts/: _all.ixx  _fwd.hpp  _fwd.ixx  all.ixx  annotation_ast.hpp  annotation_ast.ixx  array_literal_0_elements.hpp  array_literal_ast.hpp  array_literal_ast.ixx  array_literal_explicit_elements_ast.hpp  array_literal_explicit_elements_ast.ixx  array_literal_n_elements.hpp  array_literal_repeated_element_ast.hpp  array_literal_repeated_element_ast.ixx  assignment_statement_ast.hpp  assignment_statement_ast.ixx  ast.hpp  ast.ixx  asts.ixx  binary_expression_ast.hpp  binary_expression_ast.ixx  binary_expression_temp_ast.hpp  binary_expression_temp_ast.ixx  boolean_literal_ast.hpp  boolean_literal_ast.ixx  case_expression_ast.hpp  case_expression_ast.ixx  case_expression_branch.hpp  case_expression_branch_ast.hpp  case_expression_branch_ast.ixx  case_pattern_variant_ast.hpp  case_pattern_variant_ast.ixx  (+301 more)
headers/wrappers/: absl.ixx  ankerl.ixx  boost.ixx  cli11.cpp  cli11.ixx  glob.ixx  indicators.ixx  llvm.ixx  magic_enum.ixx  mppp.ixx  nlohmann.ixx  pthread.ixx  rapidfuzz.ixx  stringzilla.ixx  sys.ixx  toml.ixx  tomlpp.ixx
sources/spp/: cli.cpp  cli2.cpp
tests/: CMakeLists.txt  main.cpp  test_boot.hpp  test_macros.hpp
tests/analyse/: test_ast_annotation_ast.cpp  test_ast_array_literal_explicit_elements.cpp  test_ast_array_literal_repeated_element.cpp  test_ast_assignment_statement.cpp  test_ast_binary_expression.cpp  test_ast_case_expression.cpp  test_ast_case_pattern_variant_destructure_array.cpp  test_ast_case_pattern_variant_destructure_object.cpp  test_ast_case_pattern_variant_destructure_tuple.cpp  test_ast_class_attribute.cpp  test_ast_class_prototype.cpp  test_ast_closure.cpp  test_ast_cmp_statement.cpp  test_ast_coroutine_prototype.cpp  test_ast_float_literal.cpp  test_ast_function_call_argument.cpp  test_ast_function_call_argument_group.cpp  test_ast_function_parameter_group.cpp  test_ast_function_parameter_optional.cpp  test_ast_function_parameter_self.cpp  test_ast_function_prototype.cpp  test_ast_gen_expression.cpp  test_ast_gen_with_expression.cpp  test_ast_generic_argument.cpp  test_ast_generic_argument_comp.cpp  test_ast_generic_argument_group.cpp  test_ast_generic_argument_type.cpp  test_ast_generic_constaints.cpp  test_ast_generic_parameter_comp.cpp  test_ast_generic_parameter_group.cpp  test_ast_generic_parameter_type.cpp  test_ast_identifier.cpp  test_ast_inner_scope.cpp  test_ast_inner_scope_expression.cpp  test_ast_integer_literal.cpp  test_ast_is_expression.cpp  test_ast_iter_expression.cpp  test_ast_let_statement.cpp  test_ast_let_statement_initialized.cpp  test_ast_let_statement_uninitialized.cpp  (+68 more)
tests/gtest-parallel/: gtest_parallel.py
tests/parser/: parse.cpp  test_parse.cpp
(+418 files in other folders)
